--- a/src/sassModules/_base.scss
+++ b/src/sassModules/_base.scss
@@ -1,4 +1,5 @@
 body {
   font-family: Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
-  background-color: orange; }
+  background-color: orange;
+}
