--- a/src/sassModules/_base.scss
+++ b/src/sassModules/_base.scss
@@ -1,5 +1,106 @@
+/*
+
+Main-gsray : #A49592
+Main-red: #E99787
+Text-gray: #727077
+
+
+*/
+
 body {
   font-family: Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
-  background-color: orange;
+  background-image: -ms-linear-gradient(left, #a49592 0%, #e99787 100%);
+  background-image: -moz-linear-gradient(left, #a49592 0%, #e99787 100%);
+  background-image: -o-linear-gradient(left, #a49592 0%, #e99787 100%);
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    color-stop(0, #a49592),
+    color-stop(100, #e99787)
+  );
+  background-image: -webkit-linear-gradient(left, #a49592 0%, #e99787 100%);
+  background-image: linear-gradient(to right, #a49592 0%, #e99787 100%);
+}
+
+.section-top {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image: -ms-linear-gradient(left, #a49592 0%, #e99787 100%);
+  background-image: -moz-linear-gradient(left, #a49592 0%, #e99787 100%);
+  background-image: -o-linear-gradient(left, #a49592 0%, #e99787 100%);
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    color-stop(0, #a49592),
+    color-stop(100, #e99787)
+  );
+  background-image: -webkit-linear-gradient(left, #a49592 0%, #e99787 100%);
+  background-image: linear-gradient(to right, #a49592 0%, #e99787 100%);
+  z-index: 0;
+}
+.section-top:after {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  content: "";
+  background: #ffffff;
+  transform-origin: top right;
+  transform: skewY(4deg);
+  z-index: -1;
+}
+.section-top-material {
+  //margin: 20px auto;
+  text-align: center;
+}
+.section-top-material img {
+  width: 150px;
+  height: 150px;
+  margin-top: 30px;
+}
+.section-top-material p {
+  color: #727077;
+  margin: 0px;
+}
+.section-top-material > :nth-child(2) {
+  margin-top: 20px;
+}
+.section-bottom {
+  /*  /* IE10+ */
+  //  background-image: -ms-linear-gradient(left, #a49592 0%, #e99787 100%);
+  /* Mozilla Firefox */
+  //  background-image: -moz-linear-gradient(left, #a49592 0%, #e99787 100%);
+  /* Opera */
+  //background-image: -o-linear-gradient(left, #a49592 0%, #e99787 100%);
+  /* Webkit (Safari/Chrome 10) */
+  /*  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    color-stop(0, #a49592),
+    color-stop(100, #e99787)
+  );
+  /* Webkit (Chrome 11+) */
+  /*  background-image: -webkit-linear-gradient(left, #a49592 0%, #e99787 100%);
+  /* W3C Markup */
+  /*  background-image: linear-gradient(to right, #a49592 0%, #e99787 100%);
+  height: 500px;
+  transform: skewY(5deg);
+  padding: 15%;  */
+}
+.form-signIn {
+  //transform: skewY(-5deg);
+  text-align: center;
+}
+.signInBtn {
+  background: #727077;
+  color: #ffffff;
+  border: 0;
 }
