--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ Text-gray: #727077
 
 */
 body {
-  font-family: Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
+  font-family: Roboto, sans-serif, Helvetica Neue, Helvetica, Arial;
   -webkit-font-smoothing: antialiased;
   background-image: -ms-linear-gradient(left, #a49592 0%, #e99787 100%);
   background-image: -moz-linear-gradient(left, #a49592 0%, #e99787 100%);
@@ -18,6 +18,7 @@ body {
 
 .section-top {
   position: relative;
+  top: 200;
   width: 100%;
   height: 400px;
   background-image: -ms-linear-gradient(left, #a49592 0%, #e99787 100%);
@@ -57,30 +58,68 @@ body {
 .section-top-material > :nth-child(2) {
   margin-top: 20px; }
 
-.section-bottom {
-  /*  /* IE10+ */
-  /* Mozilla Firefox */
-  /* Opera */
-  /* Webkit (Safari/Chrome 10) */
-  /*  background-image: -webkit-gradient(
-    linear,
-    left top,
-    right top,
-    color-stop(0, #a49592),
-    color-stop(100, #e99787)
-  );
-  /* Webkit (Chrome 11+) */
-  /*  background-image: -webkit-linear-gradient(left, #a49592 0%, #e99787 100%);
-  /* W3C Markup */
-  /*  background-image: linear-gradient(to right, #a49592 0%, #e99787 100%);
-  height: 500px;
-  transform: skewY(5deg);
-  padding: 15%;  */ }
-
 .form-signIn {
-  text-align: center; }
+  position: absolute;
+  top: 70%;
+  text-align: center;
+  left: 0;
+  right: 0; }
 
 .signInBtn {
   background: #727077;
   color: #ffffff;
   border: 0; }
+
+.claimer {
+  position: absolute;
+  top: 100%;
+  text-align: center;
+  left: 0;
+  right: 0; }
+
+.claimer h3 {
+  color: #c0c0c0;
+  text-transform: uppercase;
+  text-shadow: 1px 1px #ffffff; }
+
+.claimer p {
+  font-weight: lighter;
+  color: #ffffff;
+  text-shadow: 1px 1px #a49592; }
+
+.footer {
+  position: fixed;
+  text-align: center;
+  bottom: 0px;
+  width: 100%;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: bold; }
+
+.UserPanel_wrapper {
+  background-color: #ffffff;
+  height: 100%; }
+
+.UserPanel_left {
+  background: #e99787;
+  height: 100vh; }
+
+.UserPanel_left img {
+  margin: 20px;
+  text-align: center; }
+
+.projectList {
+  margin: 10px;
+  text-align: center;
+  color: #727077; }
+
+.canvas {
+  border: 3px solid #727077;
+  width: 80%;
+  height: 80vh; }
+
+#canvas {
+  margin-top: 2px;
+  margin-left: 1px;
+  width: 99.5%;
+  height: 99%; }
