--- a/src/sassModules/_base.scss
+++ b/src/sassModules/_base.scss
@@ -8,7 +8,7 @@ Text-gray: #727077
 */
 
 body {
-  font-family: Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
+  font-family: Roboto, sans-serif, Helvetica Neue, Helvetica, Arial;
   -webkit-font-smoothing: antialiased;
   background-image: -ms-linear-gradient(left, #a49592 0%, #e99787 100%);
   background-image: -moz-linear-gradient(left, #a49592 0%, #e99787 100%);
@@ -26,6 +26,7 @@ body {
 
 .section-top {
   position: relative;
+  top: 200;
   width: 100%;
   height: 400px;
   background-image: -ms-linear-gradient(left, #a49592 0%, #e99787 100%);
@@ -57,7 +58,6 @@ body {
   z-index: -1;
 }
 .section-top-material {
-  //margin: 20px auto;
   text-align: center;
 }
 .section-top-material img {
@@ -73,34 +73,81 @@ body {
   margin-top: 20px;
 }
 .section-bottom {
-  /*  /* IE10+ */
-  //  background-image: -ms-linear-gradient(left, #a49592 0%, #e99787 100%);
-  /* Mozilla Firefox */
-  //  background-image: -moz-linear-gradient(left, #a49592 0%, #e99787 100%);
-  /* Opera */
-  //background-image: -o-linear-gradient(left, #a49592 0%, #e99787 100%);
-  /* Webkit (Safari/Chrome 10) */
-  /*  background-image: -webkit-gradient(
-    linear,
-    left top,
-    right top,
-    color-stop(0, #a49592),
-    color-stop(100, #e99787)
-  );
-  /* Webkit (Chrome 11+) */
-  /*  background-image: -webkit-linear-gradient(left, #a49592 0%, #e99787 100%);
-  /* W3C Markup */
-  /*  background-image: linear-gradient(to right, #a49592 0%, #e99787 100%);
-  height: 500px;
-  transform: skewY(5deg);
-  padding: 15%;  */
+  //z-index: 1000;
 }
 .form-signIn {
+  position: absolute;
+  top: 70%;
   //transform: skewY(-5deg);
+  //text-align: center;
+  //margin-top: 5%;
+  //top: 0;
   text-align: center;
+  left: 0;
+  right: 0;
+  //margin-left: auto;
+  //-right: auto;
 }
 .signInBtn {
   background: #727077;
   color: #ffffff;
   border: 0;
+}
+.claimer {
+  position: absolute;
+  top: 100%;
+  text-align: center;
+  left: 0;
+  right: 0;
+}
+.claimer h3 {
+  color: #c0c0c0;
+  text-transform: uppercase;
+  text-shadow: 1px 1px #ffffff;
+}
+.claimer p {
+  font-weight: lighter;
+  color: #ffffff;
+  text-shadow: 1px 1px #a49592;
+}
+.footer {
+  position: fixed;
+  text-align: center;
+  bottom: 0px;
+  width: 100%;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+// User Panel
+
+.UserPanel_wrapper {
+  background-color: #ffffff;
+  height: 100%;
+}
+
+.UserPanel_left {
+  background: #e99787;
+  height: 100vh;
+}
+.UserPanel_left img {
+  margin: 20px;
+  text-align: center;
+}
+.projectList {
+  margin: 10px;
+  text-align: center;
+  color: #727077;
+}
+.canvas {
+  border: 3px solid #727077;
+  width: 80%;
+  height: 80vh;
+}
+#canvas {
+  margin-top: 2px;
+  margin-left: 1px;
+  width: 99.5%;
+  height: 99%;
 }
