--- a/src/App.css
+++ b/src/App.css
@@ -116,7 +116,8 @@ body {
 .canvas {
   border: 3px solid #727077;
   width: 80%;
-  height: 80vh; }
+  height: 80vh;
+  cursor: crosshair; }
 
 #canvas {
   margin-top: 2px;
